# async-ai-microservices

./: .gitignore  README.md  docker-compose.yml
gateway/: Dockerfile  pyproject.toml
gateway/app/: config.py  main.py
gateway/app/middleware/: auth.py  logging.py  rate_limiter.py
gateway/app/routes/: health.py  proxy.py
gateway/app/services/: circuit_breaker.py  discovery.py
gateway/tests/: conftest.py  test_api.py  test_circuit_breaker.py  test_rate_limiter.py
services/ai_inference/: Dockerfile  pyproject.toml
services/ai_inference/app/: config.py  main.py
services/ai_inference/app/models/: schemas.py
services/ai_inference/app/routes/: completions.py  embeddings.py  health.py
services/ai_inference/app/services/: cache.py  inference.py
services/ai_inference/tests/: conftest.py  test_inference.py
services/document_processor/: Dockerfile  pyproject.toml
services/document_processor/app/: config.py  main.py
services/document_processor/app/models/: schemas.py
services/document_processor/tests/: conftest.py  test_processor.py
services/event_bus/: Dockerfile  pyproject.toml
services/event_bus/app/: config.py  main.py
services/event_bus/tests/: conftest.py  test_broker.py
shared/: events.py  middleware.py  utils.py
web/: package-lock.json  package.json  tailwind.config.ts
web/app/: globals.css  layout.tsx  page.tsx
web/app/demo/: page.tsx
web/app/live/: page.tsx
web/components/: EventFlowVisualizer.tsx  Footer.tsx  Header.tsx  LiveInference.tsx  MetricsPanel.tsx  MicroserviceDiagram.tsx  ServiceCard.tsx
(+12 files in other folders)
